fix: Send Message and 'Cancel' are in wrong position and the sizes of buttons are not good

--- a/client/src/Components/local/molecules/json-editor/bioworks.css
+++ b/client/src/Components/local/molecules/json-editor/bioworks.css
@@ -31,7 +31,6 @@
 }
 
 .form-group-button {
-  display: flex;
-  flex-direction: row-reverse;
+  float: right;
   margin-top: 14px;
 }
